templates/scaleway-csi_template.yaml
---
# Source: scaleway-csi/templates/controller/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-scaleway-csi-snapshot-validation
  labels:
    helm.sh/chart: scaleway-csi-0.1.2
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.2.3"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: release-name
    app: release-name-scaleway-csi-controller
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
---
# Source: scaleway-csi/templates/node/daemonset.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: release-name-scaleway-csi-node
  labels:
    helm.sh/chart: scaleway-csi-0.1.2
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.2.3"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: scaleway-csi
      app.kubernetes.io/instance: release-name
      app: release-name-scaleway-csi-node
  template:
    metadata:
      labels:
        app.kubernetes.io/name: scaleway-csi
        app.kubernetes.io/instance: release-name
        app: release-name-scaleway-csi-node
    spec:
      securityContext:
        {}
      serviceAccount: release-name-scaleway-csi
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-node-critical
      containers:
        - name: scaleway-csi-plugin
          image: "scaleway/scaleway-csi:v0.2.3"
          imagePullPolicy: IfNotPresent
          args :
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--v=4"
            - "--mode=node"
          securityContext:
            privileged: true
          resources:
            {}
          ports:
            - name: healthz
              containerPort: 9808
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 2
            failureThreshold: 5
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: kubelet-dir
              mountPath: /var/lib/kubelet
              mountPropagation: "Bidirectional"
            - name: device-dir
              mountPath: /dev
        - name: csi-node-driver-registrar
          image: "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=2"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--kubelet-registration-path=$(KUBELET_REGISTRATION_PATH)"
          resources:
            {}
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi/
            - name: registration-dir
              mountPath: /registration/
        - name: liveness-probe
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.10.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--csi-address=$(CSI_ADDRESS)"
          resources:
            {}
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: DirectoryOrCreate
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/csi.scaleway.com
            type: DirectoryOrCreate
        - name: kubelet-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: device-dir
          hostPath:
            path: /dev
---
# Source: scaleway-csi/templates/controller/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: release-name-scaleway-csi-controller
  labels:
    helm.sh/chart: scaleway-csi-0.1.2
    app.kubernetes.io/name: scaleway-csi
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.2.3"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: scaleway-csi
      app.kubernetes.io/instance: release-name
      app: release-name-scaleway-csi-controller
  replicas: 1
  template:
    metadata:
      annotations:
        checksum/webhook-secret: 567cf3514f09358baedd610b35a50d3b5970fc47a27858f206a220e2398994d5
      labels:
        app.kubernetes.io/name: scaleway-csi
        app.kubernetes.io/instance: release-name
        app: release-name-scaleway-csi-controller
    spec:
      securityContext:
        {}
      priorityClassName: system-cluster-critical
      serviceAccount: release-name-scaleway-csi
      containers:
        - name: scaleway-csi-plugin
          image: "scaleway/scaleway-csi:v0.2.3"
          imagePullPolicy: IfNotPresent
          args :
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--mode=controller"
            - "--v=4"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
          resources:
            {}
          ports:
            - name: healthz
              containerPort: 9808
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: healthz
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 2
            failureThreshold: 5
        - name: csi-provisioner
          image: "registry.k8s.io/sig-storage/csi-provisioner:v3.5.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
            - "--feature-gates=Topology=true"
            - "--default-fstype=ext4"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-attacher
          image: "registry.k8s.io/sig-storage/csi-attacher:v4.3.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-snapshotter
          image: "registry.k8s.io/sig-storage/csi-snapshotter:v6.2.2"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: snapshot-controller
          image: "registry.k8s.io/sig-storage/snapshot-controller:v6.2.2"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--leader-election"
          resources:
            {}
        - name: csi-resizer
          image: "registry.k8s.io/sig-storage/csi-resizer:v1.8.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--v=5"
            - "--csi-address=$(CSI_ADDRESS)"
            - "--leader-election"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: liveness-probe
          image: "registry.k8s.io/sig-storage/livenessprobe:v2.10.0"
          imagePullPolicy: IfNotPresent
          args:
            - "--csi-address=$(CSI_ADDRESS)"
          resources:
            {}
          volumeMounts:
            - name: socket-dir
              mountPath: /csi
        - name: snapshot-validation
          image: "registry.k8s.io/sig-storage/snapshot-validation-webhook:v6.2.2"
          imagePullPolicy: IfNotPresent
          args: ['--tls-cert-file=/etc/snapshot-validation-webhook/certs/tls.crt', '--tls-private-key-file=/etc/snapshot-validation-webhook/certs/tls.key']
          ports:
          - containerPort: 443
          resources:
            {}
          volumeMounts:
            - name: snapshot-validation-webhook-certs
              mountPath: /etc/snapshot-validation-webhook/certs
              readOnly: true
      volumes:
        - name: socket-dir
          emptyDir: {}
        - name: snapshot-validation-webhook-certs
          secret:
            secretName: release-name-scaleway-csi-webhook
---
# Source: scaleway-csi/templates/controller/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "validation-webhook.snapshot.storage.k8s.io"
webhooks:
- name: "validation-webhook.snapshot.storage.k8s.io"
  rules:
  - apiGroups:   ["snapshot.storage.k8s.io"]
    apiVersions: ["v1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["volumesnapshots", "volumesnapshotcontents", "volumesnapshotclasses"]
    scope:       "*"
  clientConfig:
    service:
      namespace: default
      name: release-name-scaleway-csi-snapshot-validation
      path: "/volumesnapshot"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNRENDQWhpZ0F3SUJBZ0lSQUp2dUhLNFdtOEF1RFNrcjlCSkJRTnd3RFFZSktvWklodmNOQVFFTEJRQXcKSWpFZ01CNEdBMVVFQXhNWGMyTmhiR1YzWVhrdFkzTnBMWGRsWW1odmIyc3RZMkV3SGhjTk1qUXdOVEEwTWpFdwpOekl6V2hjTk1qVXdOVEEwTWpFd056SXpXakFpTVNBd0hnWURWUVFERXhkelkyRnNaWGRoZVMxamMya3RkMlZpCmFHOXZheTFqWVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVplcFBMeW1idnMKbW1UNjF2K1QxcS96SGtmL1lBV0dOckE5SExvbTR1Z2EvamZJTVNSQnpnODFoenNmYkxVZUZOYUZFaytSMUx0MgpGbW45czZqSkZDT [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  failurePolicy: Ignore
  timeoutSeconds: 2
